test/tests/stages/8_loops/invalid_semantics/out_of_scope_loop_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(1)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  return
  const int(0)
  ;
  }
  }
